--- a/.github/workflows/nix.yaml
+++ b/.github/workflows/nix.yaml
@@ -11,6 +11,8 @@ on:
       - flake.lock
       - flake.nix
       - shell.nix
+      - "pkgs/**"
+      - "program-configs/**"
 
 jobs:
   build-application-packages:
