--- a/.github/workflows/lints.yaml
+++ b/.github/workflows/lints.yaml
@@ -28,7 +28,7 @@ jobs:
       - name: Run shfmt, shellcheck, checkbashisms
         uses: luizm/action-sh-checker@v0.7.0
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SHFMT_OPTS: "--simplify --case-indent --indent 4"
         with:
           sh_checker_comment: true
           sh_checker_checkbashisms_enable: true
