--- a/.github/workflows/lints.yaml
+++ b/.github/workflows/lints.yaml
@@ -18,9 +18,9 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install Nix
-        uses: cachix/install-nix-action@v25
-        with:
-          nix_path: nixpkgs=channel:nixos-unstable
+        uses: DeterminateSystems/nix-installer-action@v9
+
+      - uses: DeterminateSystems/magic-nix-cache-action@v1
 
       - name: Install nixpkgs-fmt
         run: nix profile install 'nixpkgs#nixpkgs-fmt'
