--- a/.github/workflows/nix.yaml
+++ b/.github/workflows/nix.yaml
@@ -22,10 +22,9 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install Nix
-        uses: cachix/install-nix-action@v25
-        with:
-          extra_nix_config: |
-            access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
+        uses: DeterminateSystems/nix-installer-action@v9
+
+      - uses: DeterminateSystems/magic-nix-cache-action@v1
 
       - name: Build Nix Packages
         run: |
@@ -38,10 +37,9 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install Nix
-        uses: cachix/install-nix-action@v25
-        with:
-          extra_nix_config: |
-            access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
+        uses: DeterminateSystems/nix-installer-action@v9
+
+      - uses: DeterminateSystems/magic-nix-cache-action@v1
 
       - name: Build Nix Packages
         run: |
