--- a/.github/workflows/lints.yaml
+++ b/.github/workflows/lints.yaml
@@ -22,8 +22,17 @@ jobs:
 
       - uses: DeterminateSystems/magic-nix-cache-action@v8
 
-      - name: Install nixpkgs-fmt
-        run: nix profile install 'nixpkgs#nixpkgs-fmt'
+      - name: Install treefmt
+        run: nix profile install 'nixpkgs#treefmt'
+
+      - name: Install nixfmt
+        run: nix profile install 'nixpkgs#nixfmt-rfc-style'
+
+      - name: Install taplo
+        run: nix profile install 'nixpkgs#taplo'
+
+      - name: Install prettier
+        run: nix profile install 'nixpkgs#nodePackages.prettier'
 
       - name: Run shfmt, shellcheck, checkbashisms
         uses: luizm/action-sh-checker@v0.9.0
@@ -33,9 +42,16 @@ jobs:
           sh_checker_comment: true
           sh_checker_checkbashisms_enable: true
 
-      - name: Run nixpkgs-fmt
+      - name: Run nixfmt-rfc-style
         run: |
-          nixpkgs-fmt --check .
+          treefmt \
+            --fail-on-change \
+            --no-cache \
+            --allow-missing-formatter \
+            --formatters nix \
+            --formatters shell \
+            --formatters toml \
+            --formatters prettier
 
       - name: Run prettier
         uses: creyD/prettier_action@v4.3
